improved file loading panel + added 3D animated skin